--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "printWidth": 120
+  "arrowParens": "always",
+  "printWidth": 150
 }
