--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "pizza",
-  "version": "0.1.0",
-  "private": true,
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
-    "gulp-sass": "^5.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/redux-persist": "^4.3.1",
+    "ahooks": "^3.7.8",
+    "axios": "^1.3.6",
     "lodash.debounce": "^4.0.8",
-    "qs": "^6.11.1",
     "react": "^18.2.0",
-    "react-content-loader": "^6.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "redux-persist": "^6.0.0",
+    "sass": "^1.62.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +43,24 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.7.1"
-  }
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonar": "^0.11.1",
+    "typescript": "4.3.5"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Anton <yudin-1337@yandex.ru>",
+  "license": "MIT",
+  "private": true
 }
